# Yet-Antother-Rasterizer

./: .gitignore  CMakeLists.txt  LICENCE
Lib/: CMakeLists.txt
Lib/include/: Camera.h  Defines.h  Renderer.h
Lib/include/Math/: LinearMath.h  Mat4.h  Quanternion.h  Vector3.h  Vector4.h
Lib/src/: Camera.cpp  Renderer.cpp
Main/: CMakeLists.txt  main.cpp
Main/include/: BasicShaderProgram.h  Buffer.h  Lights.h  Material.h  Mesh.h  Rasterizer.h  ScreenBuffer.h  ShaderProgram.h  TGAWriter.h  Texture.h
Main/include/Meshes/: ConeMesh.h  CubeMesh.cpp  CubeMesh.h  SphereMesh.h  TorusMesh.h
Main/include/Shaders/: BasicShaderProgram.h  VertexLightingShaderProgram.h
Main/src/: BasicShaderProgram.cpp  Buffer.cpp  Lights.cpp  Mesh.cpp  Rasterizer.cpp  ScreenBuffer.cpp  ShaderProgram.cpp  TGAWriter.cpp  Texture.cpp  main.cpp
Main/src/Meshes/: ConeMesh.cpp  CubeMesh.cpp  SphereMesh.cpp  TorusMesh.cpp
Main/src/Shaders/: BasicShaderProgram.cpp  VertexLightingShaderProgram.cpp
YetAnotherMathLib/: CMakeLists.txt
YetAnotherMathLib/include/: Algorithms.h  Defines.h  LinearMath.h  Mat4.h  Quanternion.h  Vector3.h  Vector4.h
YetAnotherMathLib/src/: Vector3.cpp  Vector4.cpp
